--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -6,5 +6,13 @@ PyJWT==1.7.0
 django-cors-headers==3.0.2
 
 sqlparse==0.4.1
+django-utils-six==2.0
 mysql-connector-python==8.0.32
 django-mysql
+
+dj-database-url==0.3.0
+dj-static==0.0.6
+static3==0.6.1
+whitenoise==3.3.1
+gunicorn==19.7.1
+mysqlclient==1.3.13
