--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -1,18 +1,50 @@
-django==2.2.15
-graphene-django==2.2.0
+gunicorn
+aiohttp==3.7.4
+aioredis==1.3.1
+aniso8601==7.0.0
+asgiref==3.4.1
+async-timeout==3.0.1
+attrs==21.2.0
+autobahn==21.2.1
+automat==20.2.0
+backports-datetime-fromisoformat==1.0.0
+channels==3.0.4
+constantly==15.1.0
+cryptography==3.2
+daphne==3.0.2
+django==3.2.6
+graphene==2.1.9
+graphql-core==2.3.2
+graphql-relay==2.0.1
+hyperlink==21.0.0
+idna==3.2
+idna-ssl==1.1.0
+incremental==21.3.0
+msgpack==1.0.2
+multidict==5.1.0
+promise==2.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyopenssl==20.0.1
+pytz==2021.1
+rx==1.6.1
+service-identity==21.1.0
+six==1.16.0
+sqlparse==0.4.1
+twisted==21.2.0
+txaio==21.2.1
+yarl==1.6.3
+zope.interface==5.4.0
 django-filter==2.0.0
 django-graphql-jwt==0.2.1
 PyJWT==1.7.0
 django-cors-headers==3.0.2
 
-sqlparse==0.4.1
+django-channels-graphql-ws==0.9.1
 django-utils-six==2.0
+
+graphene-django==2.2.0
+
 mysql-connector-python==8.0.32
 django-mysql
-
-dj-database-url==0.3.0
-dj-static==0.0.6
-static3==0.6.1
-whitenoise==3.3.1
-gunicorn==19.7.1
-mysqlclient==1.3.13
+requests
